appId: com.anonymous.rnlogindemo
---
- runFlow: "../../shared/handle-interruptions-android.yaml"
- assertVisible: "登录"
- tapOn:
    id: "phone-input"
- inputText: "13800138000"
- tapOn:
    id: "password-input"
- inputText: "123456"
- tapOn:
    id: "login-button"
- runFlow: "../../shared/handle-interruptions-android.yaml"
- assertVisible: "欢迎进入首页"
