appId: host.exp.Exponent
---
- assertVisible: "登录"
- tapOn:
    id: "phone-input"
- inputText: "13800138000"
- tapOn:
    id: "password-input"
- inputText: "123456"
- tapOn:
    id: "login-button"
- runFlow: "../../shared/handle-interruptions-ios.yaml"
- runFlow:
    when:
      visible:
        id: "login-screen"
    commands:
      - tapOn:
          id: "phone-input"
      - eraseText
      - inputText: "13800138000"
      - tapOn:
          id: "password-input"
      - eraseText
      - inputText: "123456"
      - tapOn:
          id: "login-button"
      - runFlow: "../../shared/handle-interruptions-ios.yaml"
- assertVisible:
    id: "welcome-home"
