appId: host.exp.exponent
---
- tapOn:
    text: "Not now"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- tapOn:
    text: "Reload"
    optional: true
- tapOn:
    text: "以后再说"
    optional: true
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "允许"
    optional: true
- tapOn:
    text: "Only this time"
    optional: true
- tapOn:
    text: "While using the app"
    optional: true
- tapOn:
    text: "Deny"
    optional: true
